[package]
name = "draft"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-secp256r1-program = "2.1.12"
solana-program = "2.1.12"
solana-feature-set = "2.1.12"
bytemuck = "1.21.0"
solana-precompile-error = "2.1.12"
solana-instruction = "2.1.12"
openssl = "0.10.69"
base64 = "0.22.1"
hex = "0.4.3"