[package]
name = "test-anchor-2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_anchor_2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-secp256r1-program = "2.1.12"
solana-program = "2.1.12"
solana-feature-set = "2.1.12"
bytemuck = "1.21.0"
solana-precompile-error = "2.1.12"